[package]
name = "skillforge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
async-graphql = "7"
async-graphql-axum = "7"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
hyper = "1.2"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
